==> micropython/micropython/ports/mimxrt/machine_timer.c <==
#include "py/runtime.h"
#include "py/mperrno.h"
#include "py/mphal.h"
#include "fsl_pit.h"
#include "modmachine.h"
#define TIMER_MODE_ONE_SHOT (0)
#define TIMER_MODE_PERIODIC (1)
#define TIMER_MIN_PERIOD 1
#define alarm_callback PIT_IRQHandler
#define PIT_SOURCE_CLOCK CLOCK_GetIpgFreq()
#define PIT_IRQ_ID PIT_IRQn

STATIC mp_obj_t machine_timer_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args) {
    machine_timer_obj_t *self;

    // Get timer id in the range of 0..2
    mp_int_t id = 0;
    if (n_args > 0) {
        id = mp_obj_get_int(args[0]);
        --n_args;
        ++args;
    }
    if (id < 0 || id >= MICROPY_HW_PIT_NUM_CHANNELS) {
        mp_raise_ValueError(MP_ERROR_TEXT("Timer does not exist"));
    }

    // check, if a timer exists at that channel and stop it first
    if (MP_STATE_PORT(timer_table)[id] != NULL) {
        PIT_StopTimer(PIT, channel_no[id]);
        self = MP_STATE_PORT(timer_table)[id];
    } else {
        self = m_new_obj_with_finaliser(machine_timer_obj_t);
        self->base.type = &machine_timer_type;
        MP_STATE_PORT(timer_table)[id] = self;
    }

    // Set initial values
    self->id = id;
    self->channel = channel_no[id];

    if (n_args > 0 || n_kw > 0) {
        // Start the timer
        mp_map_t kw_args;
        mp_map_init_fixed_table(&kw_args, n_kw, args + n_args);
        machine_timer_init_helper(self, n_args, args, &kw_args);
    }

    return MP_OBJ_FROM_PTR(self);
}

STATIC mp_obj_t machine_timer_deinit(mp_obj_t self_in) {
    machine_timer_obj_t *self = MP_OBJ_TO_PTR(self_in);
    PIT_StopTimer(PIT, self->channel);
    return mp_const_none;
}
