==> oggi82/micropython/ports/xmc/machine_timer.c <==
#include <stdint.h>
#include <string.h>
#include "py/runtime.h"
#include "py/gc.h"
#include "machine_timer.h"
#include "machine_pin.h"
#include "irq.h"
#include "xmc_ccu4.h"
#define TIMER_IRQ_MASK(channel) (1 << (channel))
#define TIMER_CNT_MASK(self) ((self)->is_32bit ? 0xffffffff : 0xffff)
#define TIMER_CHANNEL(self) ((((self)->channel) - 1) << 2)
#define machine_TIMER_OBJ_ALL_NUM MP_ARRAY_SIZE(MP_STATE_PORT(machine_timer_obj_all))

STATIC mp_obj_t machine_timer_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *args)
{
    // check arguments
    mp_arg_check_num(n_args, n_kw, 1, MP_OBJ_FUN_ARGS_MAX, true);

    // get the timer id
    mp_int_t tim_id = mp_obj_get_int(args[0]);

    // check if the timer exists
    if (tim_id <= 0 || tim_id > MICROPY_HW_MAX_TIMER) {
        nlr_raise(mp_obj_new_exception_msg_varg(&mp_type_ValueError, "Timer(%d) doesn't exist", tim_id));
    }

    machine_timer_obj_t *tim;
    if (MP_STATE_PORT(machine_timer_obj_all)[tim_id - 1] == NULL) {
        // create new Timer object
        tim = m_new_obj(machine_timer_obj_t);
        memset(tim, 0, sizeof(*tim));
        tim->base.type = &machine_timer_type;
        tim->tim_id = tim_id;
        tim->is_32bit = 0;
        switch (tim_id)
        {
            case 1: tim->tim = (XMC_CCU4_MODULE_t*)(CCU40); break;
            case 2: tim->tim = (XMC_CCU4_MODULE_t*)(CCU41); break;
            case 3: tim->tim = (XMC_CCU4_MODULE_t*)(CCU42); break;
            case 4: tim->tim = (XMC_CCU4_MODULE_t*)(CCU43); break;
            case 5: // CCU8
            case 6: // CCU8
                break;
        }   
        MP_STATE_PORT(machine_timer_obj_all)[tim_id - 1] = tim;
    } else {
        // reference existing Timer object
        tim = MP_STATE_PORT(machine_timer_obj_all)[tim_id - 1];
    }

    XMC_CCU4_Init(tim->tim, XMC_CCU4_SLICE_MCMS_ACTION_TRANSFER_PR_CR);
    XMC_CCU4_StartPrescaler(tim->tim);

    return MP_OBJ_FROM_PTR(tim);
}

STATIC mp_obj_t machine_timer_deinit(mp_obj_t self_in)
{
    machine_timer_obj_t *self = MP_OBJ_TO_PTR(self_in);
    machine_timer_slice_obj_t *chan = self->channel;
    self->channel = NULL;

    // Disable the channel interrupts
    while (chan != NULL) {
        machine_timer_channel_callback(MP_OBJ_FROM_PTR(chan), mp_const_none);
        machine_timer_slice_obj_t *prev_chan = chan;
        chan = chan->next;
        prev_chan->next = NULL;
    }

    XMC_CCU4_StopPrescaler(self->tim);
    XMC_CCU4_DisableModule(self->tim);
    return mp_const_none;
}
